Started working on the Model Performance Summary of NN

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -4616,7 +4616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4638,7 +4638,7 @@
     }
    ],
    "source": [
-    "# Show the first 10 instances of the predicted and actual productivity for the test dataset\n",
+    "# Get the performance of the initial neural network model\n",
     "getModelPerformance(initial_nn_model, 'Initial Neural Network', True)"
    ]
   },
@@ -4672,7 +4672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4731,6 +4731,7 @@
     }
    ],
    "source": [
+    "# Show the first 20 instances of the predicted and actual productivity for the train and test dataset\n",
     "print(\"Predicted - Train:\\n\")\n",
     "print(showPredToActualTable(y_train, nn_y_train_pred, 20, False))\n",
     "print(\"\\n\")\n",
@@ -5639,7 +5640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [
     {
@@ -5657,6 +5658,9 @@
       "\n",
       "Initial Neural Network Train R^2: 0.75090650141793\n",
       "Initial Neural Network Test R^2: 0.14045658132259198\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "\n",
       "Tuned Neural Network Train MSE: 0.013626707850113981\n",
       "Tuned Neural Network Test MSE: 0.017993082392974084\n",
       "\n",
@@ -5674,6 +5678,7 @@
    "source": [
     "# Get the performance of the initial and tuned neural network models\n",
     "getModelPerformance(initial_nn_model, 'Initial Neural Network', True)\n",
+    "print('\\n--------------------------------------------------\\n')\n",
     "getModelPerformance(tuned_nn_model, 'Tuned Neural Network', True)"
    ]
   },
@@ -5693,7 +5698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5752,6 +5757,7 @@
     }
    ],
    "source": [
+    "# Show the first 20 instances of the predicted and actual productivity for the train and test dataset\n",
     "print(\"Predicted - Train:\\n\")\n",
     "print(showPredToActualTable(y_train, nn_y_train_pred, 20, False))\n",
     "print(\"\\n\")\n",
