Still working on Model Performance Summary of NN

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -5683,6 +5683,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shown above are the final performance metrics of both the Initial and Tuned Neural Networks after training.\n",
+    "\n",
+    "Comparing the performance of the Initial and Tuned Neural Networks, it can be noted that the Initial Model's predictions fits the train set a lot more than the Tuned Model. \n",
+    "This may be because the RandomizedSearch using Cross-Validation and training the model with only a subset of the train set and using the rest for evaluation.\n",
+    "This lets the Tuned Model not overfit to the train set, thus why it has a higher error.\n",
+    "\n",
+    "Meanwhile, for the test set, the Tuned Model performs only marginally better than the Initial Model.\n",
+    "This may be because the default parameters of the Initial Model are already pretty good in generating a workable model by themselves.\n",
+    "\n",
+    "\n",
+    "\n",
+    "For the train error metrics, it is not surprising that they are very low as the model is trained with it. Meanwhile for the test error metrics, given that it only used the default parameters for the MLP Regressor, its error metrics are already very low.\n",
+    "\n",
+    "As the test RMSE and MAE are around 0.1~, it suggests that the the average error of the model's predicted value is +- 0.1~ from the test set's actual_productivity value.\n",
+    "However, the test R^2 error is 0.14, meaning that the model's predicted values only match around 14% of all the test set's actual_productivity values.\n",
+    "These values mean that the average error of the model to the test set is low, but it doesn't actually fit majority of the data well as a whole."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 590,
    "metadata": {},
